tdf#152266 only warn about script:event-listener with non-empty targets

Change-Id: I19518c4872b522686b3df1881ccee02d840c3db4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143829
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 8a33bde5288a4a652de35846aa34354044b872c3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143732